commit of file change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,11 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "awesomeTypescriptLoaderOptions": {
+    "useWebpackText": true,
+    "useTranspileModule": true,
+    "doTypeCheck": true,
+    "forkChecker": true
+  }
 }
