--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^2.0.16",
+    "autoprefixer": "10.4.5",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.0-beta1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -22,7 +24,6 @@
   "devDependencies": {
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
-    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.7",
