--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "postcss": "^8.4.21",
+    "sass": "^1.60.0",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.3"
