--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "react-step-progress": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "18.15.10",
