--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^2.0.16",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "10.4.5",
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.0-beta1",
+    "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
+    "emailjs-com": "^3.2.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
