--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^2.0.16",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "10.4.5",
@@ -24,11 +26,14 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-step-progress": "^1.0.3"
+    "react-step-progress": "^1.0.3",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/node": "18.15.10",
